# insite

./: .gitignore  .gitlab-ci-ebrains.yml  .gitlab-ci-rwth.yml  .gitlab-ci.yml  .gitmodules  .swagger-codegen-ignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json  conftest.py  data_storage.cpp  data_storage.hpp  docker-compose-testing.yml  docker-compose.yml  http_server.cpp  http_server.hpp  insite.yaml  insitemodule.cpp  insitemodule.h  neuron_info.hpp  recording_backend_insite.cpp  recording_backend_insite.h  requirements.txt  swagger_doc.py  test-requirements.txt  test-setup.yml
access-node/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  requirements.txt  setup.py  tox.ini  version.txt
access-node/access_node/: .clang-format  .clang-tidy  CMakeLists.txt  __main__.py  config.cpp  encoder.py  insite_defines.cpp  jsonParameters.cpp  main.cpp  nest_handler.cpp  params.cpp.bak  tvbMonitor.cpp  tvb_handler.cpp  util.py  utilityFunctions.cpp  websocket_sender.cpp  websocket_server.cpp
access-node/access_node/arbor/: cell_endpoints.cpp  probe_endpoints.cpp  spike_endpoints.cpp
access-node/access_node/controllers/: arbor_controller.py  default_controller.py  nest_controller.py  version_controller.py
access-node/access_node/include/: schema_generated.h
access-node/access_node/include/insite/: better_params.h  circular_timeseries.h  config.h  jsonParameters.h  jsonStrings.h  nest_handler.h  opcodes.h  optional.h  params.h  params.h.bak  query_params.h  query_string_builder.h  resource_flags.h  spike.h  spike_util.h  spikedetector.h  string_util.h  tvbMonitor.h  tvb_handler.h  tvb_http_endpoints.h  utilityFunctions.h  websocket_sender.h  websocket_server.h
access-node/access_node/include/insite/arbor/: arbor_endpoints.h  arbor_strings.h  probe_endpoints.h  spike_endpoints.h
access-node/access_node/include/insite/flatbuffer-schema/: schema.fbs  schema_generated.h
access-node/access_node/include/insite/nest/: endpoints.h  handler.h  kernel_status.h  multimeter.h  nestKernelStatus.h  nestMultimeter.h  nestMultimeterContainer.h  nestNode.h  nestSpikeDetectors.h  nestSpikeRecorders.h  nestSpikes.h  nestVersion.h  nodecollections.h  spikerecorder_container.h  spikerecorders.h  version.h
access-node/access_node/include/insite/tvb/: endpoints.h  monitor.h
access-node/access_node/models/: __init__.py  arbor_cell_properties.py  arbor_measurement.py  base_model_.py  error.py  error_response.py  inner_error.py  multimeter_info.py  multimeter_measurement.py  nest_kernel_status.py  nest_neuron_properties.py  nest_node_collection_nodes.py  nest_node_collection_properties.py  nest_node_model.py  nest_node_properties.py  probe.py  simulation_nodes.py  simulation_time_info.py  spikedetector_info.py  spikes.py  version.py
access-node/access_node/nest/: kernelStatus.cpp  nestMultimeter.cpp  nestMultimeterContainer.cpp  nestNode.cpp  nestSpikes.cpp  nestVersion.cpp  nest_endpoints.h  spike.cpp  spikedetector.cpp
access-node/access_node/openapi/: openapi.yaml  v1.yaml
access-node/access_node/src/: circular_dataview.inl  circular_timeseries.inl  circular_timeseries_it.inl  config.cpp  main.cpp  query_string_builder.cpp  query_string_builder.inl  utility_functions.cpp
access-node/access_node/src/arbor/: arbor_endpoints.cpp  arbor_strings.cpp  cell_endpoints.cpp  spike_endpoints.cpp
access-node/access_node/src/nest/: endpoints.cpp  handler.cpp  kernel_status.cpp  nodecollections.cpp  spike_container.cpp  spikerecorder_container.cpp  spikerecorders.cpp  version.cpp
access-node/access_node/src/tvb/: endpoints.cpp
access-node/access_node/swagger/: swagger.yaml
access-node/access_node/test/: __init__.py  test_arbor_controller.py  test_default_controller.py  test_nest_controller.py
access-node/access_node/tvb/: handler.cpp  monitor.cpp
access-node/include/insite/: circular_timeseries.h  config.h  insite_defines.h  query_params.h  query_string_builder.h  spike_util.h  utility_functions.h  websocket_server.h
access-node/include/insite/arbor/: cell_endpoints.h  parameters.h
access-node/include/insite/nest/: endpoints.h  json_strings.h  spike_container.h  spikerecorders.h  spikes.h
access-node/include/insite/tvb/: endpoints.h  handler.h  monitor.h
access-node/src/: circular_timeseries.inl  config.cpp  main.cpp  spike_util.cpp  utility_functions.cpp  websocket_server.cpp  websocket_server.inl
access-node/src/arbor/: arbor_endpoints.cpp  parameters.cpp  probe_endpoints.cpp  spike_endpoints.cpp
access-node/src/nest/: multimeter.cpp  multimeter_container.cpp  nodecollections.cpp  spikerecorders.cpp  spikes.cpp  version.cpp
access-node/src/tvb/: endpoints.cpp  handler.cpp
access-node/test/: config.py  nest_general_test_functions.py  test_get_kernel_status.py  test_get_nest_node_collections.py  test_get_nest_spikedetectors.py  test_get_nest_spikes.py  test_get_nest_spikes_per_node_collection.py  test_get_node_collections.py  test_nest_get_node_collections.py  test_nest_get_simulation_time_info.py  test_nest_get_spikes.py  test_nest_get_spikes_by_spikedetector.py
access_node/: __main__.py  distribution_nodes.json  info_node.json
arbor-module/: CMakeLists.txt  insite-arbor-config.cmake.in
arbor-module/examples/ring/: CMakeLists.txt  ring.cpp
arbor-module/examples/ring/sup/: CMakeLists.txt  json_meter.cpp
arbor-module/examples/ring/sup/include/sup/: ioutil.hpp
arbor-module/include/insite/arbor/: arbor_probe.h  arbor_spike.h  optionals_util.h  parameters.h  pipeline_backend.h  serialize.h
arbor-module/src/: arbor_probe.cpp  arbor_spike.cpp  optionals_util.cpp  parameters.cpp  pipeline_backend.cpp  serialize.cpp
database/: .gitlab-ci.yml
docker/: Dockerfile_AccessNode
docs/: README.md  access-node-api.md  docs.html  getting-started.md  index.html  index.md
example/: brunel_simulation.py
examples/: brunel_simulation.py  run.sh  run_brunel_simulation.sh.in  sim2.py  simulation.py
nest-module/: .gitignore  .gitlab-ci.yml  .ignore  CMakeLists.txt  Dockerfile  Dockerfile.bak  Dockerfile_nest3.4  Dockerfile_rc3.4  README.md
(+141 files in other folders)
